[tool.poetry]
name = "prompting"
version = "2.5"
description = "Subnetwork 1 runs on Bittensor and is maintained by Macrocosmos. It's an effort to create decentralised AI"
authors = ["Kalei Brady, Dmytro Bobrenko, Felix Quinque, Steffen Cruz"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9 <3.11"
transformers = "^4.42.4"
mathgenerator = {git = "https://github.com/synapse-alpha/mathgenerator.git", rev = "main"}
sympy = "^1.13.0"
tqdm = "^4.66.4"
requests = "^2.32.3"
numpy = "1.26.4"
bittensor = "^7.3.0"
pydantic = "^2.8.2"
rouge = "^1.0.1"
vllm = "^0.5.1"
torch = "2.3.0"
wandb = "^0.17.4"
starlette = "^0.37.2"
angle-emb = "^0.4.6"
openai = "^1.35.13"
bs4 = "^0.0.2"
wikipedia = "^1.4.0"
deprecated = "^1.2.14"
pandas = "^2.2.2"
datasets = "^2.20.0"
langchain = "^0.2.7"
argostranslate = "^1.9.6"
langchain-core = "^0.2.19"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
